<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screenPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D3D3D3"
        android:paddingVertical="25dp"
        android:text=""
        android:textDirection="ltr"
        android:gravity="right"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenPanel">

        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/CE"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/ce"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>

            <Button
                android:id="@+id/C"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/c"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>

            <Button
                android:id="@+id/BS"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/bs"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>

            <Button
                android:id="@+id/divide"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/_7"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>

            <Button
                android:id="@+id/_8"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>

            <Button
                android:id="@+id/_9"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>

            <Button
                android:id="@+id/multiply"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/_4"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn" />

            <Button
                android:id="@+id/_5"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn" />

            <Button
                android:id="@+id/_6"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn" />

            <Button
                android:id="@+id/minus"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/_1"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn" />

            <Button
                android:id="@+id/_2"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn" />

            <Button
                android:id="@+id/_3"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>

            <Button
                android:id="@+id/plus"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/smth1"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/smth1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>

            <Button
                android:id="@+id/_0"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>

            <Button
                android:id="@+id/dot"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>

            <Button
                android:id="@+id/equal"
                android:layout_width="20dp"
                android:layout_height="75dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/equal"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@drawable/custom_btn"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>